BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Multichannel_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings (introduced in v22 and beyond) for Veeva CLM</description>
    <fields>
        <fullName>CLM_EXPLICIT_OPT_IN_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines NULL behavior of Account.CLM_Opt_Type_vod attribute. If FALSE, then CLM consent will be Implicity Opt-In. When TRUE, this assumes that all accounts are Opted Out by default, and must be Explicitly Opted-In to receive email</description>
        <label>CLM Explicit Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_OPT_OUT_BEHAVIOR_vod__c</fullName>
        <description>Determines tracking behavior when the proper consent is not available when CLM Media is displayed to an Account. 0 or NULL = No Tracking, 1 = Track anonymously to Multichannel Activity</description>
        <label>CLM No Consent Behavior</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COBROWSE_DEFAULT_RECORD_TYPE_vod__c</fullName>
        <description>Stores the default recordtype name to be used when starting a CoBrowse session from the Account Detail page</description>
        <inlineHelpText>Stores the default recordtype name to be used when starting a CoBrowse session from the Account Detail page</inlineHelpText>
        <label>CoBrowse Default Call RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOM_PRESENTATION_MANAGEMENT_vod__c</fullName>
        <description>0 or NULL - disabled, 1 - CLM Presentation Slides that link expired Key Messages are deleted in Vault integration</description>
        <label>Custom Presentation Management</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CYCLE_PLAN_TARGET_MERGE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Toggles deletion of cycle plan targets of the losing Account during an Account merge. A value of 0 indicates it will maintain current behavior. A value of 1 means the cycle plan target of the account merge loser will be deleted by the merge</description>
        <label>Cycle Plan Target Merge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DEFAULT_DIRECTORY_vod__c</fullName>
        <description>Stores the External_Id_vod__c of the default Directory when accessing CLM.</description>
        <label>Default Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENABLE_CLM_FROM_ORDERS_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 or NULL - disabled, 1 - CLM accessible from Order</description>
        <label>Enable CLM from Orders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENHANCED_SUB_PRESENTATIONS_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls functionality for Sub Presentations.
0 - Default
1 - Sub Presentation Slides can be rearranged in Custom Presentations.</description>
        <label>Enhanced Sub Presentations</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HIDE_CLM_THUMBNAILS_IN_ALL_DIR_VIEW_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False: Thumbnails display in &quot;CLM Presentations&quot; and &quot;Training Presentations&quot; Directories. True: Thumbnails do not display in &quot;CLM Presentations&quot; and &quot;Training Presentations&quot; Directories.</description>
        <label>Hide CLM Thumbnails In All Dir View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCCP_DISABLE_CALL_WIDGET_vod__c</fullName>
        <defaultValue>&quot;MCCP_DISABLE_CALL_WIDGET;;Multichannel&quot;</defaultValue>
        <description>Double semi-colon delimited list of call record types where the MCCP widget should not be displayed.</description>
        <label>MCCP Disable Call Widget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCCP_ENABLE_ACTIONS_MY_PLAN_vod__c</fullName>
        <defaultValue>&quot;Call2_vod&quot;</defaultValue>
        <description>Setting for enabling action buttons from the &quot;My Plan&quot; menu. Values should be double semi-colon delimited.
Call2_vod - Enables the Schedule Calls button</description>
        <label>MCCP Enable Actions from My Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCCP_ENABLE_DETAIL_PRIORITY_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 or null = disabled
1 = enables the MCCP sub-section in the Call Detail Priority section. Columns displayed will be Detail Priority and Product</description>
        <label>MCCP Enable Detail Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCCP_ENABLE_GOALS_REM_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 or null = disabled
1 = enables the MCCP sub-section in the Call Detail Priority section. Columns displayed will be Detail Priority and Product</description>
        <label>MCCP Enable Goals Remaining</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCCP_SEND_TO_SCHED_TYPE_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting to determine the scheduler type to send filter list.
0 = Send to Call Scheduler
1 = Send to List Scheduler. Works in conjunction with the ENABLE_LIST_SCHEDULER Veeva Setting.</description>
        <label>MCCP Send to Scheduler Type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEDIA_SEARCH_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 or Null - Media search is disabled
1 - Media search is enabled</description>
        <label>Media Search</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MEDICAL_INQUIRY_OVERLAY_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Setting to configure launching medical inquiries</description>
        <label>Medical Inquiry Overlay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SELECT_CLM_CALL_RECORD_TYPE_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select the call record type for a CLM Call</description>
        <label>Select CLM Call Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SWIPE_SENSITIVITY_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the width of the swipe gesture needed to proceed to previous/next Slide. Enter 0 (or leave blank) for the default swipe. Enter 1 for swipe that is less than the default swipe. Enter 2 for the least wide swipe.</description>
        <label>Swipe Sensitivity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRACK_CLM_MEDIA_PREVIEW_vod__c</fullName>
        <description>Setting to configure CLM Tracking from Media Preview when no Account is selected</description>
        <inlineHelpText>0 or NULL - disabled, 1 - All activity, 2 - Training only</inlineHelpText>
        <label>Track CLM Media Preview</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Multichannel Settings</label>
</CustomObject>